<resources>
    <string name="app_name">KSW-ToolKit</string>
    <string name="force_sound_in_oem_radio">Force Sound in OEM Radio</string>
    <string name="init_volumes_on_boot">Init Volumes on Boot</string>
    <string name="start_on_boot">Start on Boot</string>
    <string name="sound_restorer_btntext">Sound Restorer</string>
    <string name="event_manager_btntext">Mcu Event Manager</string>
    <string name="system_tweaks_btntext">System Tweaks</string>
    <string name="adb_shell_btntext">Adb Shell</string>
    <string name="mcu_listener">Mcu Listener</string>
    <string name="keep_oem_radio_in_android">Keep OEM Radio in Android</string>
    <string name="start_app">Start App</string>
    <string name="invoke_keyevent">Invoke KeyEvent</string>
    <string name="save">Save</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="switch_sound_source">Switch Sound Source</string>
    <string name="init_mcu_volumes">Init Mcu Volumes</string>
    <string name="unassigned">Unassigned</string>
    <string name="navigation_button">Navigation Button</string>
    <string name="options_button">Options Button</string>
    <string name="back_button">Back Button</string>
    <string name="menu_button">Menu Button</string>
    <string name="knob_turn_right">Knob Turn Right</string>
    <string name="car_radio_buttons">Car Radio Buttons</string>
    <string name="knob_turn_left">Knob Turn Left</string>
    <string name="knob_tilt_right">Knob Tilt Right</string>
    <string name="knob_tilt_left">Knob Tilt Left</string>
    <string name="knob_tilt_down">Knob Tilt Down</string>
    <string name="knob_tilt_up">Knob Tilt Up</string>
    <string name="knob_press">Knob Press</string>
    <string name="drive_knob_buttons">Drive Knob Buttons</string>
    <string name="media_pause">Media Play/Pause</string>
    <string name="media_next">Media Next</string>
    <string name="media_previous">Media Previous</string>
    <string name="telephone_button_hang_up">Telephone HangUp</string>
    <string name="telephone_button_long_press">Telephone Long Press</string>
    <string name="telephone_button">Telephone Button</string>
    <string name="voice_command_button">Voice Command Button</string>
    <string name="steering_wheel_buttons">Steering Wheel Buttons</string>
    <string name="mode_button">Mode Button</string>
    <string name="hide_topbar">Hide Topbar</string>
    <string name="show_topbar">Show Topbar</string>
    <string name="shrink_topbar">Shrink Topbar</string>
    <string name="restore_topbar">Restore Topbar</string>
    <string name="change_dpi">Change DPI</string>
    <string name="show_demo_mode">Show Demo mode</string>
    <string name="enter_command">Enter Command</string>
    <string name="source">Source:</string>
    <string name="stop_ksw_on_boot">Stop KSW on boot</string>
    <string name="ksw_service">KSW Service</string>
    <string name="import_config">Import Config</string>
    <string name="export_config">Export Config</string>
    <string name="restart_system">Restart System</string>
    <string name="assigned">Assigned</string>
    <string name="set_max_volume_at_boot">Max Volume at Boot</string>
    <string name="auto_volume">Auto Volume</string>
    <string name="start_at_boot">Start at Boot</string>
    <string name="clear_boot_animation">Clear Boot Animation</string>
    <string name="default_dpi_val">160</string>
    <string name="toolkit">Main Menu</string>
    <string name="import_export_config">Import/Export Config</string>
    <string name="brightness">Brightness:</string>
    <string name="car_info">Car-Info</string>
    <string name="radio">Radio</string>
    <string name="aux">AUX</string>
    <string name="dvr">DVR</string>
    <string name="dvd">DVD</string>
    <string name="front_cam">Front Cam</string>
    <string name="open_source">Open Source:</string>
    <string name="frontcam">frontCam</string>
    <string name="screen_off">Screen Off</string>
    <string name="dtv">DTV</string>
    <string name="turn_screen_off">Turn Screen Off</string>
    <string name="send_mcu_command">Send MCU Command</string>
    <string name="volumedec_button">Volume- Button</string>
    <string name="volumeinc_button">Volume+ Button</string>
    <string name="log_car_data">Log Car Data</string>
    <string name="log_mcu_events">Log Mcu Events</string>
    <string name="reroute_navicallouts">Reroute NaviCallouts</string>
    <string name="give_tasker_read_logs_permission">Give Tasker READ_LOGS permission</string>
    <string name="intercept_mcucommmands">Intercept McuCommmands</string>
    <string name="enable_media_tel_button_handling">Enable Media/Tel Button Handling</string>
    <string name="night_brightness">Night Brightness:</string>
    <string name="sound_restorer">Sound Restorer</string>

</resources>