<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.SystemTwaks">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:columnCount="2">
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/startAppAtBootTgl"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_at_boot"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/startStopKSWServiceSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ksw_service"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/autoVolumeToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_volume"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/maxVolumeAtBootToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_max_volume_at_boot"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/hideTopBarToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_topbar"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/shrinkTopBarToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shrink_topbar"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/logCarDataToggle"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_car_data"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/logMcuEventsToggle"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_mcu_events"
                style="@style/switchTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/changeDpiBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/change_dpi"
                style="@style/normalButton"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dpiTxtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:singleLine="true"
                android:text="@string/default_dpi_val"/>
        </LinearLayout>
        <Button
            android:id="@+id/giveTaskerLogcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Give Tasker\nREAD_LOGS permission"
            style="@style/normalButton"/>
    </GridLayout>

</FrameLayout>