<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.KSWToolKit"
    tools:context=".gui.ToolKit">

    <!--RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/border_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="15dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/screen_off" />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_web_asset_off_64"
                android:contentDescription="@string/screen_off" />
        </LinearLayout>
    </RelativeLayout-->

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="20dp"
            android:text="@string/open_source"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/carInfoBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/nbt_src_icon_carinfo"
                    android:contentDescription="@string/car_info" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_info"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/radioBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_radio_64"
                    android:contentDescription="@string/radio" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frontCamBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_camera_alt_64"
                    android:contentDescription="@string/frontcam" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front_cam"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/auxBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_cable_64"
                    android:contentDescription="@string/aux" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aux"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dvrBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_videocam_64"
                    android:contentDescription="@string/dvr" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dvr"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dvdBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_settings_input_component_64"
                    android:contentDescription="@string/dvd" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dvd"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dtvBtn"
                android:background="@drawable/border_selector"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_baseline_live_tv_64"
                    android:contentDescription="@string/dtv" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dtv"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/brightness"/>

            <SeekBar
                android:id="@+id/brightnessSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:min="0"
                android:padding="20dp"
                android:progress="100" />
        </LinearLayout>

        <Button
            android:id="@+id/screenOffBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/turn_screen_off"/>


    </LinearLayout>


</FrameLayout>